<resources>
    <string name="app_name">SeniorBrainTraining</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_name">Enter name</string>
    <string name="userName">Player</string>
    <string name="enter_password">Enter password</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Reset Password</string>
    <string name="not_a_member">Not a member?</string>
    <string name="are_you_a_member">Are you a member?</string>
    <string name="level1">level 1</string>
    <string name="level2">level 2</string>
    <string name="level3">level 3</string>
    <string name="level4">level 4</string>
    <string name="level5">level 5</string>
    <string name="level6">level 6</string>
    <string name="level7">level 7</string>
    <string name="level8">level 8</string>
    <string name="level9">level 9</string>
    <string name="setting">setting</string>
    <string name="app_setting">App Setting</string>
    <string name="quick_game">Quick Game</string>
    <string name="tries">tries</string>
    <string name="score">score</string>
    <string name="sound">Sound</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="change_username">Change username</string>
    <string name="change_password">Change password</string>
    <string name="submit">Submit</string>
    <string name="about_app">See about app</string>
    <string name="logo">logo</string>
    <string name="perfil">perfil</string>
    <string name="changePhoto">Change photo</string>
    <string name="about">About me</string>
    <string name="congratulation">Congratulation! </string>
    <string name="description">Tendo em consideração que a doença de esquecimento (Alzheimer) é um dos
                        problemas mais frequentes na terceira idade, infelizmente, irreversível (segundo a fonte abaixo)
                        uma vez diagnosticada! De modo a ajudar na prevenção da mesma, cuja uma das formas de fazê-la é
                        “estimular o raciocínio e a cognição cerebral”, esta aplicação visa proporcionar à faixa etária
                        acima supracitada um jogo de combinação de imagens semelhantes com graus de dificuldade aumentando a cada nível.
    </string>
</resources>