<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF8F6F6"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/HeaderConstraintLayout"
        android:layout_width="406dp"
        android:layout_height="122dp"
        android:background="@drawable/header_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            app:cardCornerRadius="50dp"
            app:cardElevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/profileImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/person"
                tools:ignore="VectorDrawableCompat" />
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/userName"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/cardView2"
            app:layout_constraintStart_toEndOf="@+id/cardView2"
            app:layout_constraintTop_toTopOf="@+id/cardView2" />

        <ImageView
            android:id="@+id/logOutButton"
            android:layout_width="62dp"
            android:layout_height="72dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/exit_door" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableLayout
        android:id="@+id/LevelsTableLayout"
        android:layout_width="330dp"
        android:layout_height="438dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/corner_rounded_menu"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/BottomConstrainLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HeaderConstraintLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center">

            <ImageView
                android:id="@+id/level1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/authentication_button"
                android:contentDescription="@string/level1"
                android:focusable="true"
                android:padding="25dp"
                app:srcCompat="@drawable/ic_baseline_star_24" />

            <ImageView
                android:id="@+id/level2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/authentication_button"
                android:contentDescription="@string/level2"
                android:focusable="true"
                android:padding="25dp"
                app:srcCompat="@android:drawable/ic_lock_lock" />

            <ImageView
                android:id="@+id/level3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/authentication_button"
                android:clickable="true"
                android:contentDescription="@string/level3"
                android:focusable="true"
                android:padding="25dp"
                app:srcCompat="@android:drawable/ic_lock_lock" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/level4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/authentication_button"
                android:clickable="true"
                android:contentDescription="@string/level4"
                android:focusable="true"
                android:padding="25dp"
                app:srcCompat="@android:drawable/ic_lock_lock" />

            <ImageView
                android:id="@+id/level5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/authentication_button"
                android:clickable="true"
                android:contentDescription="@string/level5"
                android:focusable="true"
                android:padding="25dp"
                app:srcCompat="@android:drawable/ic_lock_lock" />

            <ImageView
                android:id="@+id/level6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/authentication_button"
                android:clickable="true"
                android:contentDescription="@string/level6"
                android:focusable="true"
                android:padding="25dp"
                app:srcCompat="@android:drawable/ic_lock_lock" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ImageView
                android:id="@+id/level7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/authentication_button"
                android:clickable="true"
                android:contentDescription="@string/level7"
                android:focusable="true"
                android:padding="25dp"
                app:srcCompat="@android:drawable/ic_lock_lock" />

            <ImageView
                android:id="@+id/level8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/authentication_button"
                android:clickable="true"
                android:contentDescription="@string/level8"
                android:focusable="true"
                android:padding="25dp"
                app:srcCompat="@android:drawable/ic_lock_lock" />

            <ImageView
                android:id="@+id/level9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/authentication_button"
                android:clickable="true"
                android:contentDescription="@string/level9"
                android:focusable="true"
                android:padding="25dp"
                app:srcCompat="@android:drawable/ic_lock_lock" />
        </TableRow>

    </TableLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/BottomConstrainLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/settingButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginLeft="28dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/corner_rounded2"
            android:drawableLeft="@drawable/ic_baseline_settings_24"
            android:drawablePadding="10dp"
            android:text="@string/setting"
            app:backgroundTint="#1854E8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/quickGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/quick_game_button_style"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/quick_game"
            app:backgroundTint="#06410A"
            app:layout_constraintBottom_toBottomOf="@+id/settingButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/settingButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/textViewLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/level1"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/LevelsTableLayout"
        app:layout_constraintStart_toStartOf="@+id/LevelsTableLayout"
        app:layout_constraintTop_toTopOf="@+id/LevelsTableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>